convert/objects/Position__c.object
<CustomObject>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(ISBLANK( Close_Date__c ) ,  TODAY() -  Open_Date__c ,  Close_Date__c -  Open_Date__c )</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Excel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FN - 100</fullName>
                </value>
                <value>
                    <fullName>FN - 200</fullName>
                </value>
                <value>
                    <fullName>FN - 300</fullName>
                </value>
                <value>
                    <fullName>FN - 400</fullName>
                </value>
                <value>
                    <fullName>HR - 100</fullName>
                </value>
                <value>
                    <fullName>HR - 200</fullName>
                </value>
                <value>
                    <fullName>HR - 300</fullName>
                </value>
                <value>
                    <fullName>HR - 400</fullName>
                </value>
                <value>
                    <fullName>IT -  100</fullName>
                </value>
                <value>
                    <fullName>IT -  200</fullName>
                </value>
                <value>
                    <fullName>IT - 300</fullName>
                </value>
                <value>
                    <fullName>IT - 400</fullName>
                </value>
                <value>
                    <fullName>RO - 100</fullName>
                </value>
                <value>
                    <fullName>RO - 200</fullName>
                </value>
                <value>
                    <fullName>RO - 300</fullName>
                </value>
                <value>
                    <fullName>RO - 400</fullName>
                </value>
                <value>
                    <fullName>WH - 100</fullName>
                </value>
                <value>
                    <fullName>WH - 200</fullName>
                </value>
                <value>
                    <fullName>WH - 300</fullName>
                </value>
                <value>
                    <fullName>WH - 400</fullName>
                </value>
                <value>
                    <fullName>MC - 100</fullName>
                </value>
                <value>
                    <fullName>MC - 200</fullName>
                </value>
                <value>
                    <fullName>MC - 300</fullName>
                </value>
                <value>
                    <fullName>MC - 400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                    <default>true</default>
                    <label>San Francisco, CA</label>
                </value>
                <value>
                    <fullName>Austin, TX</fullName>
                </value>
                <value>
                    <fullName>Boulder, CO</fullName>
                </value>
                <value>
                    <fullName>London, England</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Mumbai, India</fullName>
                </value>
                <value>
                    <fullName>Sydney, Australia</fullName>
                </value>
                <value>
                    <fullName>Tokyo, Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PowerPoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PowerPoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <formula>IF( Days_Open__c &gt; 20, &quot;Red&quot; , IF(Days_Open__c &gt; 10, &quot;Yellow&quot;, &quot;Green&quot;))</formula>
        <label>Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Building__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Word__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Word</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <label>Working Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Non_Technical_Position</fullName>
        <active>true</active>
        <description>Select to create a Non Technical Position</description>
        <label>Non Technical Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Position</fullName>
        <active>true</active>
        <description>Select to create a Technical Position</description>
        <label>Technical Position</label>
    </recordTypes>
    <validationRules>
        <fullName>Min_Pay_Should_Not_be_Greater_than_MaxP</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Pay__c &gt;  Max_Pay__c</errorConditionFormula>
        <errorMessage>Min Pay Should not be Greater Than Max Pay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Closed_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISBLANK (Close_Date__c ), 
  OR( ISPICKVAL( Status__c , &apos;Closed - Filled&apos;),
      ISPICKVAL( Status__c , &apos;Closed - Not- Approved&apos;),
      ISPICKVAL( Status__c , &apos;Closed - Canceled&apos;))
  )</errorConditionFormula>
        <errorMessage>Please Populate Closed Date</errorMessage>
    </validationRules>
</CustomObject>